fix wrong content

--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -155,7 +155,7 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 | `scanner.getResolution()`                         | [`cameraEnhancer.getResolution()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#getresolution)                                                                                                                                                                                                                               |
 | `scanner.setResolution()`                         | [`cameraEnhancer.setResolution()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#setresolution)                                                                                                                                                                                                                               |
 | `scanner.getVideoSettings()`                      | [`cameraEnhancer.getVideoSettings()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#getvideosettings)                                                                                                                                                                                                                         |
-| `scanner.updateVideoSettings()`                   | `cameraEnhancer.updateVideoSettings(https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#updatevideosettings)`                                                                                                                                                                                                                       |
+| `scanner.updateVideoSettings()`                   | [`cameraEnhancer.updateVideoSettings`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#updatevideosettings)`                                                                                                                                                                                                                    |
 | `Dynamsoft.DBR.Barcodescanner.testCameraAccess()` | [`Dynamsoft.DCE.CameraEnhancer.testCameraAccess()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#testcameraaccess)                                                                                                                                                                                                           |
 | `scanner.play()`                                  | [`cameraEnhancer.open()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#open) or <br>[`cameraEnhancer.resume()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#resume) if paused.                                                                               |
 | `scanner.onPlayed`                                | [`cameraEnhancer.on("played", fn)`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/auxiliary.html#on)                                                                                                                                                                                                                                              |
@@ -186,13 +186,13 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 
 ## Other APIs changes
 
-| API in v9.x                                                                      | API in v10.x                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
-| -------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| `scanner.convertToPageCoordinates()`                                             | [`cameraEnhancer.convertToPageCoordinates()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/ui.html#converttopagecoordinates)                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
-| `scanner.convertToClientCoordinates()`                                           | [`cameraEnhancer.convertToClientCoordinates()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/ui.html#converttoclientcoordinates)                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
-| `scanner.showTip()`                                                              | [`cameraEnhancer.setTipConfig()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#settipconfig) <br>[`cameraEnhancer.setTipVisible(true)`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#settipvisible)                                                                                                                                                                                                                                                                                                      |
-| `scanner.hideTip()`                                                              | [`cameraEnhancer.setTipVisible(false)`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#settipvisible)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| `scanner.onTipSuggested()`                                                       | No equivalent.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| `scanner.updateTipMessage()`                                                     | [`cameraView.updateTipMessage()`] (https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#updatetipmessage)                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
-| `reader.getModeArgument()`<br>`reader.setModeArgument()`                         | No equivalent.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+| API in v9.x                                                                      | API in v10.x                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+| -------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `scanner.convertToPageCoordinates()`                                             | [`cameraEnhancer.convertToPageCoordinates()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/ui.html#converttopagecoordinates)                                                                                                                                                                                                                                                                                                 |
+| `scanner.convertToClientCoordinates()`                                           | [`cameraEnhancer.convertToClientCoordinates()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/ui.html#converttoclientcoordinates)                                                                                                                                                                                                                                                                                             |
+| `scanner.showTip()`                                                              | [`cameraEnhancer.setTipConfig()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#settipconfig) <br>[`cameraEnhancer.setTipVisible(true)`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#settipvisible)                                                                                                                                               |
+| `scanner.hideTip()`                                                              | [`cameraEnhancer.setTipVisible(false)`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#settipvisible)                                                                                                                                                                                                                                                                                                          |
+| `scanner.onTipSuggested()`                                                       | No equivalent.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+| `scanner.updateTipMessage()`                                                     | [`cameraView.updateTipMessage()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#updatetipmessage)                                                                                                                                                                                                                                                                                                            |
+| `reader.getModeArgument()`<br>`reader.setModeArgument()`                         | No equivalent.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
 | `scanner.ifSaveOriginalImageInACanvas` <br>`scanner.getOriginalImageInACanvas()` | `settings = router.getSimplifiedSettings('SPECIFY-A-TEMPLATE');`<br>`settings.capturedResultItemTypes += Dynamsoft.Core.EnumCapturedResultItemType.CRIT_ORIGINAL_IMAGE;`<br>`await router.updateSettings("detect-document-boundaries", settings);`<br>`const resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onOriginalImageResultReceived = result => { // GET-THE-ORIGINAL-IMAGE //};`<br>`router.addResultReceiver(resultReceiver)` |
