fix broken table

--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -155,7 +155,7 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 | `scanner.getResolution()`                         | [`cameraEnhancer.getResolution()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#getresolution)                                                                                                                                                                                                                               |
 | `scanner.setResolution()`                         | [`cameraEnhancer.setResolution()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#setresolution)                                                                                                                                                                                                                               |
 | `scanner.getVideoSettings()`                      | [`cameraEnhancer.getVideoSettings()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#getvideosettings)                                                                                                                                                                                                                         |
-| `scanner.updateVideoSettings()`                   | [`cameraEnhancer.updateVideoSettings`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#updatevideosettings)`                                                                                                                                                                                                                    |
+| `scanner.updateVideoSettings()`                   | [`cameraEnhancer.updateVideoSettings`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#updatevideosettings)                                                                                                                                                                                                                    |
 | `Dynamsoft.DBR.Barcodescanner.testCameraAccess()` | [`Dynamsoft.DCE.CameraEnhancer.testCameraAccess()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#testcameraaccess)                                                                                                                                                                                                           |
 | `scanner.play()`                                  | [`cameraEnhancer.open()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#open) or <br>[`cameraEnhancer.resume()`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#resume) if paused.                                                                               |
 | `scanner.onPlayed`                                | [`cameraEnhancer.on("played", fn)`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/auxiliary.html#on)                                                                                                                                                                                                                                              |
