--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -9,7 +9,7 @@ noTitleIndex: true
 permalink: /programming/javascript/release-notes/js-10.html
 ---
 
-# Release Notes for Dynamsoft Document Normalizer JavaScript SDK
+# Release Notes for Dynamsoft Barcode Reader JavaScript SDK
 
 ## 10.0.20 (10//2023)
 
