redirect link fixed

--- a/programming/javascript/upgrade-guide/7to9.md
+++ b/programming/javascript/upgrade-guide/7to9.md
@@ -112,4 +112,4 @@ If you manipulated any of the built-in UI elements which are located by their cl
 
 The file **dbr.scanner.html** has been renamed to **dbr.ui.html**.
 
-If you are still having issue with the upgrade, please [contact us](https://www.dynamsoft.com/company/contact/).
+If you are still having issue with the upgrade, please [contact us](https://www.dynamsoft.com/contact/).
