update menu to match the latest dcv js menu

--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -7,7 +7,7 @@ needAutoGenerateSidebar: true
 permalink: /programming/javascript/upgrade-guide/9to10.html
 ---
 
-# How to Upgrade DBR JS from v9.x to v10.x
+# How to Upgrade DBR-JS from v9.x to v10.x
 
 > NOTE
 > 
