--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -21,11 +21,11 @@ In this version, the `DynamsoftBarcodeReader` SDK has been refactored under the 
 
 * License-related functions are handled by class [`Dynamsoft.License.LicenseManager`]({{ site.dcv_js_api }}license/license-manager.html#initLicense).
 
-* Camera-related functions are handled by [`DynamsoftCameraEnhancer(DCE)`](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/). Please note that the following features are grouped together as enhanced features that require a license:
+* Camera-related functions are handled by [DynamsoftCameraEnhancer(DCE)](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/). Please note that the following features are grouped together as enhanced features that require a license:
   * Enhanced-focus.
   * Auto-zoom.
   * Tap-to-focus.
 
-* This version of `BarcodeReader` only accepts `DynamsoftCameraEnhancer(DCE)` version 4.0.1 and above, which has been refactored to be compliant with the [`ImageSourceAdapter` (ISA) interface](https://www.dynamsoft.com/capture-vision/docs/core/architecture/input.html#image-source-adapter), as a valid image source.
+* This version of `BarcodeReader` only accepts `DynamsoftCameraEnhancer(DCE)` version 4.0.1 and above, which has been refactored to be compliant with the [ImageSourceAdapter (ISA) interface](https://www.dynamsoft.com/capture-vision/docs/core/architecture/input.html#image-source-adapter), as a valid image source.
 
-* Decoded barcode results are returned via the [`CapturedResultReceiver` (CRR) interface](https://www.dynamsoft.com/capture-vision/docs/core/architecture/output.html#captured-result-receiver).
+* Decoded barcode results are returned via the [CapturedResultReceiver (CRR) interface](https://www.dynamsoft.com/capture-vision/docs/core/architecture/output.html#captured-result-receiver).
