--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -15,11 +15,11 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 ### Changelog
 
-In this version, the `DynamsoftBarcodeReader` SDK has been refactored under the `DynamsoftCaptureVision` (DCV) architecture. To learn more about the architecture, please see [Architecture of Dynamsoft Capture Vision](https://www.dynamsoft.com/capture-vision/docs/core/architecture/). The following highlights the major changes:
+In this version, the SDK has been refactored under the `DynamsoftCaptureVision` (DCV) architecture. To learn more about the architecture, please see [Architecture of Dynamsoft Capture Vision](https://www.dynamsoft.com/capture-vision/docs/core/architecture/). The following highlights the major changes:
 
 * The class `BarcodeReader` and `BarcodeScanner` are removed and its functionalities are now incorporated into the newly added Class `CaptureVisionRouter`.
 
-* License-related functions are handled by class [`Dynamsoft.License.LicenseManager`]({{ site.dcv_js_api }}license/license-manager.html#initLicense).
+* License-related functions are handled by class [Dynamsoft.License.LicenseManager]({{ site.dcv_js_api }}license/license-manager.html#initLicense).
 
 * Camera-related functions are handled by [DynamsoftCameraEnhancer(DCE)](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/). Please note that the following features are grouped together as enhanced features that require a license:
   * Enhanced-focus.
