update to internal commit 7c388761

--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -9,6 +9,15 @@ permalink: /programming/javascript/upgrade-guide/9to10.html
 
 # How to Upgrade DBR-JS from v9.x to v10.x
 
+Version 10 of the Dynamsoft Barcode Reader JavaScript edition has undergone a comprehensive overhaul to align with the Dynamsoft Capture Vision architecture. To understand the advantages of this new architecture, please refer to these resources:
+
+* [Overview of Dynamsoft Capture Vision](https://www.dynamsoft.com/capture-vision/docs/core/introduction/)
+* [Dynamsoft Capture Vision Framework Details](https://www.dynamsoft.com/capture-vision/docs/core/architecture/)
+
+Additionally, it's important to note that Dynamsoft's ongoing enhancements will be based on this updated architecture. By upgrading to version 10 and adopting the new framework concurrently, you will gain access to the latest features and enhanced performance.
+
+Due to these significant changes, a substantial rewrite of your existing code will be necessary to transition to the new version. This document will provide guidance throughout this upgrading process.
+
 > NOTE
 > 
 > In this guide, we assume the following
@@ -39,6 +48,10 @@ In version 10.x, you need to reference several modules:
 ## Change the APIs for initializing
 
 ### License
+
+> IMPORTANT INFORMATION
+> 
+> Users with a time-limited license for version 8 or newer can utilize their existing license for version 10. However, if you possess a permanent license or a time-limited license for version 7 or earlier, a license update may be required. For further details, please reach out to [Dynamsoft Sales](sales@dynamsoft.com).
 
 In version 10, license control is taken over by the "License" module:
 
