update to internal commit 8e2571bc

--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -11,6 +11,12 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 # Release Notes for Dynamsoft Barcode Reader JavaScript SDK
 
+## 10.0.21 (02/05/2024)
+
+#### Improved
+
+- Introduced `dbr.bundle.js` to include packages that are required on running Dynamsoft Barcode Reader to reduce the complexity of the code.
+
 ## 10.0.20 (01/29/2024)
 
 ### Changelog
