--- a/programming/javascript/upgrade-guide/8to9.md
+++ b/programming/javascript/upgrade-guide/8to9.md
@@ -58,10 +58,10 @@ Previously, you might have used the APIs `productKeys`, `handshakeCode`, `organi
 
 | API Name | Notes |
 |:-:|:-:|
-| `whenToPlaySoundforSuccessfulRead` | Moved to [ScanSettings](../api-reference/interface/ScanSettings.md). |
-| `soundOnSuccessfullRead` | Moved to [ScanSettings](../api-reference/interface/ScanSettings.md). |
-| `whenToVibrateforSuccessfulRead` | Moved to [ScanSettings](../api-reference/interface/ScanSettings.md). |
-| `vibrateDuration` | Moved to [ScanSettings](../api-reference/interface/ScanSettings.md). |
+| `whenToPlaySoundforSuccessfulRead` | Moved to [ScanSettings](https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/interface/ScanSettings.html). |
+| `soundOnSuccessfullRead` | Moved to [ScanSettings](https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/interface/ScanSettings.html). |
+| `whenToVibrateforSuccessfulRead` | Moved to [ScanSettings](https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/interface/ScanSettings.html). |
+| `vibrateDuration` | Moved to [ScanSettings](https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/interface/ScanSettings.html). |
 
 * The file **dbr.scanner.html** has been renamed to **dbr.ui.html**.
 
