--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -146,8 +146,8 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 | `scanner.getUIElement()`                                                                                                                         | [cameraView.getUIElement()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#getuielement)                                        |
 | `scanner.setUIElement()`                                                                                                                         | [cameraView.setUIElement()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#setuielement)                                        |
 | `Dynamsoft.DBR.BarcodeScanner.defaultUIElementURL="THE-URL-TO-THE-HTML"`                                                                         | [Dynamsoft.DCE.CameraView.createInstance("THE-URL-TO-THE-HTML")](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#createinstance) |
-| `scanner.barcodeFillStyle` <br>`scanner.barcodeStrokeStyle` <br>`scanner.barcodeLineWidth`                                                       | Change the preset style `STYLE_GREEN_STROKE` (ID = 2).                                                                                                                                   |
-| `scanner.barcodeFillStyleBeforeVerification` <br>`scanner.barcodeStrokeStyleBeforeVerification` <br>`scanner.barcodeLineWidthBeforeVerification` | Change the preset style `STYLE_GREEN_STROKE_TRANSPARENT` (ID = 10).                                                                                                                      |
+| `scanner.barcodeFillStyle` <br>`scanner.barcodeStrokeStyle` <br>`scanner.barcodeLineWidth`                                                       | Change the preset style `STYLE_ORANGE_STROKE` (ID = 2).                                                                                                                                   |
+| `scanner.barcodeFillStyleBeforeVerification` <br>`scanner.barcodeStrokeStyleBeforeVerification` <br>`scanner.barcodeLineWidthBeforeVerification` | Change the preset style `STYLE_ORANGE_STROKE_TRANSPARENT` (ID = 10).                                                                                                                      |
 | `scanner.regionMaskFillStyle` <br>`scanner.regionMaskStrokeStyle` <br>`scanner.regionMaskLineWidth`                                              | [cameraView.setScanRegionMaskStyle()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#setscanregionmaskstyle)                    |
 | `scanner.setVideoFit()`                                                                                                                          | [cameraView.setVideoFit()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#setvideofit)                                          |
 | `scanner.getVideoFit()`                                                                                                                          | [cameraView.getVideoFit()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#getvideofit)                                          |
